src/objects/Opportunity_Naming_Settings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Settings for controlling how Opportunities are named.</description>
    <label>Opportunity Naming Settings</label>
    <fields>
        <fullName>Attribution__c</fullName>
        <description>Whether this setting applies to individual opportunities, organizational opportunities, or both.</description>
        <inlineHelpText>Whether this setting applies to individual opportunities, organizational opportunities, or both.</inlineHelpText>
        <label>Attribution</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Format__c</fullName>
        <description>The format for dates included in this opportunity name.</description>
        <inlineHelpText>The format for dates included in this opportunity name.</inlineHelpText>
        <label>Date Format</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Name_Format__c</fullName>
        <description>The format to use for Opportunity naming.</description>
        <inlineHelpText>The format to use for Opportunity naming.</inlineHelpText>
        <label>Opportunity Name Format</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Record_Types__c</fullName>
        <description>Specifies the opportunity record type that this naming scheme is for.</description>
        <inlineHelpText>Specifies the opportunity record type that this naming scheme is for.</inlineHelpText>
        <label>Opportunity Record Types</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>